--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
+# DATASOURCE
 server.port = 8081
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:winery
+spring.datasource.url=jdbc:h2:file:./data/winery
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=winery
 spring.datasource.password=winery
-spring.h2.console.enabled=true 
-spring.h2.console.path=/h2
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
