fix: corrigindo configs do h2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 # DATASOURCE
-server.port = 8081
-spring.datasource.url=jdbc:h2:file:./data/winery
+server.port = 8082
+spring.datasource.url=jdbc:h2:file:./data/db;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=winery
-spring.datasource.password=winery
+spring.datasource.username=sa
+spring.datasource.password=
+
 
 # H2 Console
 spring.h2.console.enabled=true
