--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.example.YourMainClass</mainClass>
+                            <mainClass>br.com.ecommerce.winery.WineryApplication</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
