--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,16 @@
             <artifactId>caelum-stella-core</artifactId>
             <version>2.1.3</version> <!-- Verifique a versão mais recente no repositório do Maven -->
         </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
 
     </dependencies>
 
