--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,8 @@ spring.thymeleaf.cache=false
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+
+
+
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
