corrigindo sessao de cliente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,4 @@ spring.servlet.multipart.max-request-size=10MB
 
 spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+server.servlet.session.timeout=30m
